syntax = "proto3";

package IT.WebServices.Fragments.Authorization.Payment.Fortis;

import "google/api/annotations.proto";
import "Protos/IT/WebServices/Fragments/Authorization/Payment/DataRecords.proto";

service FortisInterface {
  rpc FortisNewOwnSubscription (FortisNewOwnSubscriptionRequest) returns (FortisNewOwnSubscriptionResponse)
  {
    option (google.api.http) = {
      post: "/api/payment/fortis/subscription/new"
      body: "*"
    };
  }
}

message FortisNewOwnSubscriptionRequest {
  string TransactionID = 1;
}

message FortisNewOwnSubscriptionResponse {
  GenericSubscriptionRecord Record = 1;
  string Error = 2;
}

